generator client {
  provider = "prisma-client"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ── Better Auth core tables ────────────────────────────────────────────────

model User {
  id            String    @id
  name          String
  email         String    @unique
  emailVerified Boolean
  image         String?
  createdAt     DateTime
  updatedAt     DateTime
  sessions      Session[]
  accounts      Account[]

  userAccount UserAccount?
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime
  updatedAt DateTime
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime
  updatedAt             DateTime
}

model Verification {
  id         String    @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime?
  updatedAt  DateTime?
}

// ── LMS domain tables ──────────────────────────────────────────────────────

enum UserRole {
  SUPER_ADMINISTRATOR
  ADMINISTRATOR
  EDUCATOR
  STUDENT
}

enum UserAccountStatus {
  INACTIVE
  ACTIVE
  DISABLED
}

model UserAccount {
  id                     String            @id @default(cuid())
  userId                 String            @unique
  user                   User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  role                   UserRole
  generatedIdentifier    String            @unique
  institutionalEmail     String            @unique
  status                 UserAccountStatus @default(INACTIVE)
  mustChangePassword     Boolean           @default(true)
  homeFacultyId          String?
  createdAt              DateTime          @default(now())
  updatedAt              DateTime          @updatedAt
  fileAssets             FileAsset[]
  primaryModuleOfferings ModuleOffering[]  @relation("PrimaryEducatorModuleOfferings")

  studentEnrollments              Enrollment[]                @relation("StudentEnrollments")
  enrolledByEnrollments           Enrollment[]                @relation("EnrolledByEnrollments")
  createdModuleEnrollmentExceptions ModuleEnrollmentException[] @relation("CreatedModuleEnrollmentExceptions")
  authorizedCapacityOverrides     CapacityOverride[]          @relation("CapacityOverrides")
  createdClassSessions            ClassSession[]              @relation("CreatedClassSessions")
  createdAnnouncements            Announcement[]              @relation("CreatedAnnouncements")
  receivedNotifications           Notification[]              @relation("ReceivedNotifications")
  sentChatMessages                ChatMessage[]               @relation("SentChatMessages")
  chatParticipantActivities       ChatParticipantActivity[]   @relation("ChatParticipantActivities")
  createdFeedbackPeriods          FeedbackPeriod[]            @relation("CreatedFeedbackPeriods")
  submittedFeedbackResponses      FeedbackResponse[]          @relation("SubmittedFeedbackResponses")
}

// ── Academic catalogue ────────────────────────────────────────────────────

enum CatalogueStatus {
  ACTIVE
  INACTIVE
}

enum AwardLevel {
  FOUNDATION
  DIPLOMA
  DEGREE
  MASTERS
  PHD
}

model Faculty {
  id        String          @id @default(cuid())
  name      String
  status    CatalogueStatus @default(ACTIVE)
  courses   Course[]
  createdAt DateTime        @default(now())
  updatedAt DateTime        @updatedAt
}

model Course {
  id                 String              @id @default(cuid())
  code               String              @unique
  name               String
  awardLevel         AwardLevel
  awardingBody       String?
  facultyId          String
  faculty            Faculty             @relation(fields: [facultyId], references: [id])
  status             CatalogueStatus     @default(ACTIVE)
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  curriculumTemplate CurriculumTemplate?
  courseOfferings    CourseOffering[]
}

model Module {
  id              String           @id @default(cuid())
  code            String           @unique
  name            String
  description     String?
  status          CatalogueStatus  @default(ACTIVE)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  templateModules TemplateModule[]
}

model Intake {
  id              String           @id @default(cuid())
  name            String
  status          CatalogueStatus  @default(ACTIVE)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  courseOfferings CourseOffering[]
}

model StudyMode {
  id              String           @id @default(cuid())
  name            String
  status          CatalogueStatus  @default(ACTIVE)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  courseOfferings CourseOffering[]
  moduleOfferings ModuleOffering[]
}

model SessionType {
  id            String          @id @default(cuid())
  name          String
  status        CatalogueStatus @default(ACTIVE)
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
  classSessions ClassSession[]
}

// ── Audit Log ─────────────────────────────────────────────────────────────

enum AuditEventType {
  SYSTEM
  OPERATIONAL
}

model AuditLogEntry {
  id         String         @id @default(cuid())
  eventType  AuditEventType
  action     String
  actorId    String
  entityType String
  entityId   String?
  beforeJson String?
  afterJson  String?
  reason     String?
  createdAt  DateTime       @default(now())
}

// ── System Settings ────────────────────────────────────────────────────────

model SystemSettings {
  id                                   String   @id @default(cuid())
  defaultReminderPeriodDays            Int      @default(15)
  attendanceCorrectionWindowDays       Int      @default(7)
  passThresholdPercent                 Float    @default(50)
  attendanceRiskThresholdPercent       Float    @default(80)
  postCourseMarkingWindowDays          Int      @default(14)
  maxUploadBytesChatAttachment         Int      @default(10485760)
  maxUploadBytesSubmission             Int      @default(104857600)
  maxUploadBytesContentAttachment      Int      @default(52428800)
  maxUploadBytesAnnouncementAttachment Int      @default(20971520)
  updatedAt                            DateTime @updatedAt
}

// ── File storage ───────────────────────────────────────────────────────────

enum FileCategory {
  CHAT_ATTACHMENT
  SUBMISSION
  CONTENT_ATTACHMENT
  ANNOUNCEMENT_ATTACHMENT
}

enum FileAssetStatus {
  ACTIVE
  DELETED
}

model FileAsset {
  id               String          @id @default(cuid())
  storageDriver    String
  storageKey       String          @unique
  originalFilename String
  mimeType         String
  sizeBytes        Int
  category         FileCategory
  uploadedById     String
  uploadedBy       UserAccount     @relation(fields: [uploadedById], references: [id])
  status           FileAssetStatus @default(ACTIVE)
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt

  announcementAttachments AnnouncementAttachment[]
  chatMessageAttachments  ChatMessageAttachment[]
}

// ── Curriculum Templates ───────────────────────────────────────────────────

model CurriculumTemplate {
  id        String          @id @default(cuid())
  courseId  String          @unique
  course    Course          @relation(fields: [courseId], references: [id])
  status    CatalogueStatus @default(ACTIVE)
  createdAt DateTime        @default(now())
  updatedAt DateTime        @updatedAt

  academicLevels  AcademicLevel[]
  templateModules TemplateModule[]
}

model AcademicLevel {
  id                   String             @id @default(cuid())
  curriculumTemplateId String
  curriculumTemplate   CurriculumTemplate @relation(fields: [curriculumTemplateId], references: [id], onDelete: Cascade)
  label                String
  sortOrder            Int
  expectedCredits      Int?
  createdAt            DateTime           @default(now())
  updatedAt            DateTime           @updatedAt

  templateModules TemplateModule[]
}

model TemplateModule {
  id                   String             @id @default(cuid())
  curriculumTemplateId String
  curriculumTemplate   CurriculumTemplate @relation(fields: [curriculumTemplateId], references: [id], onDelete: Cascade)
  academicLevelId      String
  academicLevel        AcademicLevel      @relation(fields: [academicLevelId], references: [id], onDelete: Cascade)
  moduleId             String
  module               Module             @relation(fields: [moduleId], references: [id])
  credits              Int
  sortOrder            Int
  createdAt            DateTime           @default(now())
  updatedAt            DateTime           @updatedAt

  prerequisites               TemplateModulePrerequisite[] @relation("Dependent")
  dependents                  TemplateModulePrerequisite[] @relation("Prerequisite")
  defaultAssessmentComponents DefaultAssessmentComponent[]
  moduleOfferings             ModuleOffering[]
}

model TemplateModulePrerequisite {
  templateModuleId String
  templateModule   TemplateModule @relation("Dependent", fields: [templateModuleId], references: [id], onDelete: Cascade)
  prerequisiteId   String
  prerequisite     TemplateModule @relation("Prerequisite", fields: [prerequisiteId], references: [id], onDelete: Cascade)

  @@id([templateModuleId, prerequisiteId])
}

enum AssessmentComponentType {
  ONLINE_ASSIGNMENT
  OFFLINE_ASSESSMENT
}

model DefaultAssessmentComponent {
  id               String                  @id @default(cuid())
  templateModuleId String
  templateModule   TemplateModule          @relation(fields: [templateModuleId], references: [id], onDelete: Cascade)
  title            String
  type             AssessmentComponentType
  weightPercent    Float
  maximumMark      Float
  createdAt        DateTime                @default(now())
  updatedAt        DateTime                @updatedAt
}

// ── Course Delivery ──────────────────────────────────────────────────────

enum OfferingStatus {
  PLANNED
  ACTIVE
  ARCHIVED
}

model CourseOffering {
  id          String         @id @default(cuid())
  courseId    String
  course      Course         @relation(fields: [courseId], references: [id])
  intakeId    String
  intake      Intake         @relation(fields: [intakeId], references: [id])
  studyModeId String
  studyMode   StudyMode      @relation(fields: [studyModeId], references: [id])
  name        String
  startAt     DateTime
  finishAt    DateTime
  capacity    Int            @default(24)
  status      OfferingStatus @default(PLANNED)
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt

  moduleOfferings ModuleOffering[]
  enrollments     Enrollment[]
  announcements   Announcement[]

  @@unique([courseId, intakeId])
}

model ModuleOffering {
  id                String         @id @default(cuid())
  courseOfferingId  String
  courseOffering    CourseOffering @relation(fields: [courseOfferingId], references: [id], onDelete: Cascade)
  templateModuleId  String
  templateModule    TemplateModule @relation(fields: [templateModuleId], references: [id])
  primaryEducatorId String
  primaryEducator   UserAccount    @relation("PrimaryEducatorModuleOfferings", fields: [primaryEducatorId], references: [id])
  studyModeId       String?
  studyMode         StudyMode?     @relation(fields: [studyModeId], references: [id])
  startAt           DateTime
  finishAt          DateTime
  status            OfferingStatus @default(PLANNED)
  createdAt         DateTime       @default(now())
  updatedAt         DateTime       @updatedAt

  moduleGroupChat             ModuleGroupChat?
  moduleEnrollmentExceptions  ModuleEnrollmentException[]
  classSessions               ClassSession[]
  announcements               Announcement[]
  feedbackPeriod              FeedbackPeriod?

  @@unique([courseOfferingId, templateModuleId])
}

model ModuleGroupChat {
  id               String         @id @default(cuid())
  moduleOfferingId String         @unique
  moduleOffering   ModuleOffering @relation(fields: [moduleOfferingId], references: [id], onDelete: Cascade)
  isReadOnly       Boolean        @default(false)
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt

  messages             ChatMessage[]
  participantActivities ChatParticipantActivity[]
}

enum ChatMessageStatus {
  ACTIVE
  EDITED
  REMOVED
}

model ChatMessage {
  id        String            @id @default(cuid())
  chatId    String
  chat      ModuleGroupChat   @relation(fields: [chatId], references: [id], onDelete: Cascade)
  senderId  String
  sender    UserAccount       @relation("SentChatMessages", fields: [senderId], references: [id])
  body      String
  status    ChatMessageStatus @default(ACTIVE)
  editedAt  DateTime?
  createdAt DateTime          @default(now())
  updatedAt DateTime          @updatedAt

  attachments ChatMessageAttachment[]
  sharedLinks ChatMessageSharedLink[]
}

model ChatMessageAttachment {
  id          String      @id @default(cuid())
  messageId   String
  message     ChatMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)
  fileAssetId String
  fileAsset   FileAsset   @relation(fields: [fileAssetId], references: [id])
  createdAt   DateTime    @default(now())
}

model ChatMessageSharedLink {
  id        String      @id @default(cuid())
  messageId String
  message   ChatMessage @relation(fields: [messageId], references: [id], onDelete: Cascade)
  url       String
  title     String?
  createdAt DateTime    @default(now())
}

model ChatParticipantActivity {
  chatId     String
  chat       ModuleGroupChat @relation(fields: [chatId], references: [id], onDelete: Cascade)
  userId     String
  user       UserAccount     @relation("ChatParticipantActivities", fields: [userId], references: [id], onDelete: Cascade)
  lastSeenAt DateTime

  @@id([chatId, userId])
}

// ── Enrollment ─────────────────────────────────────────────────────────────

enum EnrollmentStatus {
  ACTIVE
  WITHDRAWN
  COMPLETED
}

enum ExceptionType {
  INCLUDE
  EXCLUDE
}

model Enrollment {
  id               String           @id @default(cuid())
  studentId        String
  student          UserAccount      @relation("StudentEnrollments", fields: [studentId], references: [id])
  courseOfferingId String
  courseOffering   CourseOffering   @relation(fields: [courseOfferingId], references: [id])
  isMainEnrollment Boolean          @default(false)
  status           EnrollmentStatus @default(ACTIVE)
  enrolledById     String
  enrolledBy       UserAccount      @relation("EnrolledByEnrollments", fields: [enrolledById], references: [id])
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  moduleEnrollmentExceptions ModuleEnrollmentException[]
  capacityOverride           CapacityOverride?

  @@unique([studentId, courseOfferingId])
}

model ModuleEnrollmentException {
  id               String         @id @default(cuid())
  enrollmentId     String
  enrollment       Enrollment     @relation(fields: [enrollmentId], references: [id], onDelete: Cascade)
  moduleOfferingId String
  moduleOffering   ModuleOffering @relation(fields: [moduleOfferingId], references: [id])
  exceptionType    ExceptionType
  reason           String
  createdById      String
  createdBy        UserAccount    @relation("CreatedModuleEnrollmentExceptions", fields: [createdById], references: [id])
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt

  @@unique([enrollmentId, moduleOfferingId])
}

model CapacityOverride {
  id             String     @id @default(cuid())
  enrollmentId   String     @unique
  enrollment     Enrollment @relation(fields: [enrollmentId], references: [id], onDelete: Cascade)
  reason         String
  authorizedById String
  authorizedBy   UserAccount @relation("CapacityOverrides", fields: [authorizedById], references: [id])
  createdAt      DateTime   @default(now())
}

// ── Announcements ─────────────────────────────────────────────────────────

enum AnnouncementScope {
  INSTITUTION
  COURSE_OFFERING
  MODULE_OFFERING
}

model Announcement {
  id               String            @id @default(cuid())
  scope            AnnouncementScope
  courseOfferingId String?
  courseOffering   CourseOffering?   @relation(fields: [courseOfferingId], references: [id])
  moduleOfferingId String?
  moduleOffering   ModuleOffering?   @relation(fields: [moduleOfferingId], references: [id])
  body             String
  expiresAt        DateTime?
  createdById      String
  createdBy        UserAccount       @relation("CreatedAnnouncements", fields: [createdById], references: [id])
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt

  attachments   AnnouncementAttachment[]
  sharedLinks   AnnouncementSharedLink[]
  notifications Notification[]
}

model AnnouncementAttachment {
  id             String       @id @default(cuid())
  announcementId String
  announcement   Announcement @relation(fields: [announcementId], references: [id], onDelete: Cascade)
  fileAssetId    String
  fileAsset      FileAsset    @relation(fields: [fileAssetId], references: [id])
  createdAt      DateTime     @default(now())
}

model AnnouncementSharedLink {
  id             String       @id @default(cuid())
  announcementId String
  announcement   Announcement @relation(fields: [announcementId], references: [id], onDelete: Cascade)
  url            String
  title          String?
  createdAt      DateTime     @default(now())
}

// ── Notifications ──────────────────────────────────────────────────────────

enum NotificationSourceType {
  ANNOUNCEMENT
}

model Notification {
  id             String                 @id @default(cuid())
  recipientId    String
  recipient      UserAccount            @relation("ReceivedNotifications", fields: [recipientId], references: [id], onDelete: Cascade)
  sourceType     NotificationSourceType
  announcementId String?
  announcement   Announcement?          @relation(fields: [announcementId], references: [id])
  title          String
  readAt         DateTime?
  createdAt      DateTime               @default(now())
}

// ── Class Sessions ─────────────────────────────────────────────────────────

model ClassSession {
  id                 String         @id @default(cuid())
  moduleOfferingId   String
  moduleOffering     ModuleOffering @relation(fields: [moduleOfferingId], references: [id], onDelete: Cascade)
  sessionTypeId      String
  sessionType        SessionType    @relation(fields: [sessionTypeId], references: [id])
  startAt            DateTime
  finishAt           DateTime
  sessionLocation    String?
  attendanceRequired Boolean        @default(true)
  createdById        String
  createdBy          UserAccount    @relation("CreatedClassSessions", fields: [createdById], references: [id])
  createdAt          DateTime       @default(now())
  updatedAt          DateTime       @updatedAt
}

// ── Module Feedback ────────────────────────────────────────────────────────

enum FeedbackResponseStatus {
  ACTIVE
  MODERATED
}

model FeedbackPeriod {
  id               String         @id @default(cuid())
  moduleOfferingId String         @unique
  moduleOffering   ModuleOffering @relation(fields: [moduleOfferingId], references: [id], onDelete: Cascade)
  openAt           DateTime
  closeAt          DateTime
  createdById      String
  createdBy        UserAccount    @relation("CreatedFeedbackPeriods", fields: [createdById], references: [id])
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt

  responses FeedbackResponse[]
}

model FeedbackResponse {
  id               String                 @id @default(cuid())
  feedbackPeriodId String
  feedbackPeriod   FeedbackPeriod         @relation(fields: [feedbackPeriodId], references: [id], onDelete: Cascade)
  studentId        String
  student          UserAccount            @relation("SubmittedFeedbackResponses", fields: [studentId], references: [id])
  rating           Int
  comment          String?
  status           FeedbackResponseStatus @default(ACTIVE)
  createdAt        DateTime               @default(now())
  updatedAt        DateTime               @updatedAt

  @@unique([feedbackPeriodId, studentId])
}
